Added recent-activity parameters
Specified `max_lines` as `6`, and `readme_file` as `"README.md"`.

--- a/.github/recent-activity.config.yml
+++ b/.github/recent-activity.config.yml
@@ -1,6 +1,8 @@
 settings:
   disabled_events:
     - "comments"
+  max_lines: 6
+  readme_file: "README.md"
   date:
     timezone: "America/Vancouver"
     text: "Last Updated: {DATE}"
