--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Update README
 
 on:
   schedule:
-    - cron: '0 * * * *' # Update every hour
+    - cron: '*/5 * * * *' # Update every 5 minutes (for testing)
   workflow_dispatch:
 
 jobs:
